--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,9 +1,16 @@
 .logo {
-  font-size: 24px;
-  font-weight: 600;
-  color: #fff;
-  text-decoration: none;
   display: inline-flex;
   align-items: center;
+  text-decoration: none;
   gap: 8px;
+}
+
+.logoIcon {
+  height: 30px;
+}
+
+.logoText {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
 }
