--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,36 +1,54 @@
-.headerLink {
-  display: inline-block;
-  text-decoration: none;
-  color: #141010;
+.navList {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.headerLink:not(:last-child) {
-	margin-right: 50px;
-}
-
-.link.active {
-  padding: 30px 0px;
+.navItem {
   position: relative;
-  color: #680747;
-}
-
-.link.active::after {
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  left: 0;
-  bottom: -1px;
-  border-radius: 2px;
-  background-color: #404bbf;
-  content: "";
 }
 
 .link {
-  display: block;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  padding-bottom: 4px;
+  transition: color 0.3s ease;
 }
 
-.link:hover,
-.link:focus {
-  color: #c3195d;
+.link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: #fff;
+  transition: width 0.3s ease;
+}
+
+.link.active::after {
+  width: 100%;
+}
+
+.link:hover {
+  color: #c2854d;
+}
+
+.mobileButton {
+  background-color: #c2854d;
+  color: #fff;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.mobileButton:hover {
+  background-color: #a96b3a;
 }
