--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,34 +1,68 @@
-.container {
+.navList {
   display: flex;
   align-items: center;
-  gap: 30px;
-  text-decoration: none;
-  color: #141010;
+  gap: 24px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.link.active {
-  padding: 30px 0px;
+.navItem {
   position: relative;
-  color: #680747;
-}
-
-.link.active::after {
-  position: absolute;
-  width: 100%;
-  height: 5px;
-  left: 0;
-  bottom: -1px;
-  border-radius: 2px;
-  background-color: #404bbf;
-  content: "";
 }
 
 .link {
-  display: block;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 0;
+  line-height: 1.2;
+  display: inline-block;
+  transition: color 0.3s ease;
 }
 
-.link:hover,
-.link:focus {
-  color: #c3195d;
+.link::after {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #fff;
+  transition: width 0.3s ease;
+  border-radius: 1px;
+}
+
+.link.active::after {
+  width: 100%;
+}
+.link:hover {
+  color: #c2854d;
+}
+
+.authRegister {
+  background-color: #9b6c43;
+  color: #fff;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 12px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.2;
+  cursor: pointer;
+  margin-left: 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  white-space: nowrap;
+  transition: background-color 0.3s ease;
+}
+
+.authRegister:hover {
+  background-color: #8c5f38;
 }
