--- a/src/components/RecipeCard/RecipeCard.module.css
+++ b/src/components/RecipeCard/RecipeCard.module.css
@@ -6,11 +6,14 @@ flex-direction: column;
 gap: 16px;
 border-radius: 16px;
 
+  user-select: none;
 padding: 12px;
   box-sizing: border-box; 
 }
 .imageCard {
- border-radius: 8px;
+    border-radius: 8px;
+width: 264px;
+height: 178px;
 }
 .recipeForm {
     display: flex;
