--- a/src/components/RecipesList/RecipesList.module.css
+++ b/src/components/RecipesList/RecipesList.module.css
@@ -186,4 +186,12 @@ height: 33px;
   outline: none;
   cursor: pointer;
 }
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
 }
