--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -2,26 +2,53 @@
   position: relative;
   width: 100%;
   max-width: 300px;
+
+  max-width: 600px;
+  margin: 0 auto 30px;
+  padding: 0 10px;
 }
 
-.input {
-  padding: 10px 20px 10px 40px;
+.searchBox {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
   width: 100%;
-  border: none;
-  outline: 1px solid transparent;
+}
+
+.searchInput {
+  flex: 1;
+  padding: 12px 12px;
   font-size: 16px;
-  border-bottom: 2px solid #141010;
-  background: transparent;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  outline: none;
+  color: #333;
+  margin-right: 12px;
 }
 
-.iconPosition {
-  position: relative;
+.searchInput::placeholder {
+  color: #aaa;
 }
 
-.inputIcon {
-  position: absolute;
-  left: 5px;
-  top: 100%;
-  transform: translateY(-100%);
-  fill: #2e2f42;
+.searchButton {
+  padding: 13px 66.5px;
+  font-size: 16px;
+  background-color: #9B6C43; 
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
+
+.searchButton:hover {
+  background-color: #6D554B;
+}
+
+
+
+
+
+
