--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #ffffff;
-  font-family: "Montserrat", sans-serif;
+  background-color: #fbfcf8;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1,
