--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -37,8 +37,8 @@
 
 .input {
   padding: 12px 16px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
+  border: 1px solid #d9d9d9;
+  border-radius: 8px;
   font-size: 14px;
   margin-bottom: 4px;
 }
@@ -64,17 +64,6 @@
 
 .button:hover {
   background-color: #563c29;
-}
-
-.skipButton {
-  margin-top: 12px;
-  background-color: #ccc;
-  color: #222;
-  padding: 10px;
-  border-radius: 6px;
-  font-size: 14px;
-  cursor: pointer;
-  border: none;
 }
 
 .registerText {
