--- a/src/components/RecipeCard/RecipeCard.module.css
+++ b/src/components/RecipeCard/RecipeCard.module.css
@@ -58,7 +58,7 @@ color: #000;
     flex-direction: column;
     gap: 8px;
   }
-  .recipeDescriptioncss {
+  .descriptioncss {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.55;
