delete button NF add img in hero

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,28 +1,48 @@
 .hero {
   background-color: #3d2218;
-  background-image: url("../../images/hero/hero-mobile.jpg"); /* mobile за замовчуванням */
+  background-image: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0.3) 0%,
+      rgba(0, 0, 0, 0.9) 100%
+    ),
+    url("../../images/Hero/Bannermobile.webp");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top center;
   background-size: cover;
   padding: 128px 32px;
 }
 
 @media (min-resolution: 192dpi) {
   .hero {
-    background-image: url("../../images/hero/hero-mobile@2x.jpg");
+    background-image: linear-gradient(
+        to left,
+        rgba(0, 0, 0, 0.3) 0%,
+        rgba(0, 0, 0, 0.9) 100%
+      ),
+      url("../../images/Hero/Banner@2xmobile.webp");
   }
 }
 
 /* Tablet 768px+ */
 @media (min-width: 768px) {
   .hero {
-    background-image: url("../../images/hero/hero-tablet.jpg");
+    background-image: linear-gradient(
+        to left,
+        rgba(0, 0, 0, 0.3) 0%,
+        rgba(0, 0, 0, 0.9) 100%
+      ),
+      url("../../images/Hero/Bannertablet.webp");
+    background-position: top center;
   }
 
   @media (min-resolution: 192dpi) {
     .hero {
-      padding: 128px 32px;
-      background-image: url("../../images/hero/hero-tablet@2x.jpg");
+      background-image: linear-gradient(
+          to left,
+          rgba(0, 0, 0, 0.3) 0%,
+          rgba(0, 0, 0, 0.9) 100%
+        ),
+        url("../../images/Hero/Banner@2xtablet.webp");
     }
   }
 }
@@ -31,12 +51,24 @@
 @media (min-width: 1440px) {
   .hero {
     padding: 128px 108px;
-    background-image: url("../../images/hero/hero-desktop.jpg");
+    background-image: linear-gradient(
+        to left,
+        rgba(0, 0, 0, 0.3) 0%,
+        rgba(0, 0, 0, 0.9) 100%
+      ),
+      url("../../images/Hero/Banner.webp");
+    background-position: top center;
   }
 
   @media (min-resolution: 192dpi) {
     .hero {
-      background-image: url("../../images/hero/hero-desktop@2x.jpg");
+      background-image: linear-gradient(
+          to left,
+          rgba(0, 0, 0, 0.3) 0%,
+          rgba(0, 0, 0, 0.9) 100%
+        ),
+        url("../../images/Hero/Banner@2x.webp");
+      background-position: top center;
     }
   }
 }
