--- a/src/components/SaveFavoriteButton/SaveFavoriteButton.module.css
+++ b/src/components/SaveFavoriteButton/SaveFavoriteButton.module.css
@@ -23,9 +23,12 @@
   align-items: center;
   justify-content: center;
   border-radius: 8px;
+  transition: background 0.3s;
 }
 .favoriteButton:hover,
-.favoriteButton:focus {
+.favoriteButton:focus,
+.smallFavoriteButton:hover,
+.smallFavoriteButton:focus {
   background: #6d554b;
 }
 
@@ -57,3 +60,4 @@
     max-height: 56px;
   }
 }
+git commit -m "save button" 
