--- a/src/pages/AddRecipePage/AddRecipePage.module.css
+++ b/src/pages/AddRecipePage/AddRecipePage.module.css
@@ -22,6 +22,12 @@
     .title {
         font-size: 48px;
         line-height: 1.1;
+    } 
+}
+
+@media screen and (min-width: 1440px) {
+    .container {
+        max-width: 1440px;
+        padding: 48px 107px;
     }
-    
 }
